--- a/style.css
+++ b/style.css
@@ -52,10 +52,15 @@ body {
     justify-content: center;
 }
 
-div.player-options > img {
-    max-width: 205px;
-    max-height: 205px;
+div.player-options button {
+    max-width: 200px;
+    max-height: 200px;
     border: 5px solid cyan;
+}
+
+div.player-options img {
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .game-information {
@@ -66,8 +71,8 @@ div.player-options > img {
     gap: 300px;
 }
 
-img {
-    max-width: 205px;
-    max-height: 205px;
+img.computer-choice {
+    max-width: 200px;
+    max-height: 200px;
     border: 5px solid firebrick;
 }
