--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 body {
     padding: 32px;
     background-color: #333333;
-    font-family: "Roboto", Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     color: #fff;
     font-size: 32px;
 }
